--- a/album.html
+++ b/album.html
@@ -1,10 +1,10 @@
 <table>
   <thead>
     <tr>
-      <th>Album title</th>
-      <th>Musical artist</th>
-      <th>Year released</th>
-      <th>Track Lists</th>
+      <th>Album</th>
+      <th>Artist</th>
+      <th>Year</th>
+      <th>Track</th>
     </tr>
   </thead>
   <tbody>
